--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,14 @@
         tools:context=".MainActivity">
 
     <TextView
+            android:text="Free VMemory: 1024Mb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/vmemEt" android:textStyle="bold"
+            android:textColor="@color/colorPrimary" android:textSize="24sp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/memEt"/>
+    <TextView
             android:text="Finished"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -98,7 +106,7 @@
             android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
             android:id="@+id/runningList"/>
     <TextView
-            android:text="Free Memory: 2048"
+            android:text="Free Memory: 2048Mb"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/memEt" android:textStyle="bold"
@@ -106,7 +114,7 @@
             android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/memEt3"/>
     <TextView
-            android:text="Monitored OS Stats:"
+            android:text="Monitored OS/Hardware Stats:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/memEt2" android:textStyle="bold"
@@ -120,10 +128,30 @@
             android:textColor="@color/colorAccent" android:textSize="24sp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/memEt2"/>
+    <TextView
+            android:text="Paging Table:"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/memEt4" android:textStyle="bold"
+            android:textColor="@color/colorAccent" android:textSize="24sp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/vmemEt"/>
     <ListView
             android:layout_width="300dp"
             android:layout_height="0dp" android:layout_marginStart="16dp"
             app:layout_constraintStart_toEndOf="@+id/runningList" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintBottom_toTopOf="@+id/exeBtn"
             android:layout_marginBottom="16dp" android:id="@+id/finishedList"/>
+    <ListView
+            android:layout_width="150dp"
+            android:layout_height="0dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toEndOf="@+id/finishedList" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/memEt4" app:layout_constraintBottom_toTopOf="@+id/exeNumBtn"
+            android:layout_marginBottom="16dp" android:id="@+id/pKeyList"/>
+    <ListView
+            android:layout_width="150dp"
+            android:layout_height="0dp" android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/memEt4" app:layout_constraintBottom_toTopOf="@+id/exitBtn"
+            android:layout_marginBottom="16dp" android:id="@+id/pValueList"/>
 </android.support.constraint.ConstraintLayout>
